# CommonCore42

./: .gitignore  README.md
GNL/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  get_next_utils.c
Libft/: CLAUDE.md  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+7 more)
PushSwap/: Makefile  README.md  claude_code_prompt.md  evaluation_tests_prompt.md  push_swap  push_swap.h
PushSwap/srcs/: list.c  main.c  operations_a.c  operations_b.c  operations_both.c  operations_utils.c  ops_rev_rotate.c  ops_rotate.c  ops_swap_push.c  parse.c  parse_utils.c  position.c  sort_chunk.c  sort_five.c  sort_radix.c  sort_small.c  stack_utils.c  utils.c
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_putchar.c  ft_puthex.c  ft_putnbr.c  ft_putptr.c  ft_putstr.c  ft_putunbr.c  main.c
pythonModules/module00/: ft_count_harvest_iterative.py  ft_harvest_total.py  ft_seed_inventory.py
pythonModules/module04/: error.txt  generate_test_file.py
pythonModules/module08/ex1/: loading.py  pyproject.toml
(+65 files in other folders)
